Fixed Resume Page alignment
Iframe now centers on all devices

--- a/Personal-Site/properties.css
+++ b/Personal-Site/properties.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,600');
 body {
   margin: 0;
   background: #222;
@@ -75,4 +74,9 @@ nav a:hover::before {
   position: fixed;
   top: 0;
   width: 100%
+}
+#myResume{
+  margin-top: 50px;
+  height: 750px; 
+  width: 700px;
 }
